fix: removed extra margin in image

--- a/src/Styles/App.scss
+++ b/src/Styles/App.scss
@@ -12,12 +12,10 @@
       padding-bottom: 1rem;
     }
     &ImageHolder {
-      margin-top: 1rem;
       margin-bottom: 1rem;
     }
     &Button {
       margin-top: 1rem;
-      margin-bottom: 1rem;
     }
     &Footer {
       padding-top: 1rem;
